--- a/architux/themes/archituxold/layouts/post/single.html
+++ b/architux/themes/archituxold/layouts/post/single.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
         
-        {{ partial "head.html" .}} 
+        {{ partial "header.html" .}} 
         
 <body>
+<div class="main">
+<div class="spirale">
+</div>
         
         {{ .Content }}
         
+        {{ partial "footer.html" .}} 
+
+</div>
+
+
 <body>
 </html>
