--- a/architux/themes/archituxold/layouts/post/single.html
+++ b/architux/themes/archituxold/layouts/post/single.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
         
-        {{ partial "header.html" .}} 
+        {{ partial "head.html" .}} 
         
 <body>
 <div class="main">
 <div class="spirale">
+
+        {{ partial "header.html" .}} 
+        
 </div>
         
         {{ .Content }}
