--- a/mugairyu/layouts/_default/onepagestyle.html
+++ b/mugairyu/layouts/_default/onepagestyle.html
@@ -1,4 +1,6 @@
 <article id="{{ .File.TranslationBaseName }}">
-  <h1>{{ .Title }}</h1>
+  <!--<h1>{{ .Title }}</h1>-->
+  {{.TableOfContents}}
+
   {{ .Content }}
 </article>
