--- a/mugairyu/layouts/_default/single.html
+++ b/mugairyu/layouts/_default/single.html
@@ -1,1 +1,37 @@
-{{ .Content }}
+{{ partial "header.html" . }}
+
+    <!-- Wrapper -->
+      <div id="wrapper">
+
+        <!-- Header -->
+          <header id="header">
+            <div class="logo">
+              {{ with .Site.Params.logoimage }}
+              <img src="{{ . }}" width="100%" style="padding: 10px 10px 10px 10px;">
+            {{ end }}
+            {{ with .Site.Params.logo }}            
+              <span class="icon {{ . }}"></span>
+            {{ end }}
+            </div>
+            <div class="content">
+              <div class="inner">
+                <h1>{{ .Site.Title | safeHTML }}</h1>
+                <p>{{ .Site.Params.description | safeHTML }}</p>
+              </div>
+            </div>
+
+          </header>
+
+        <!-- Main -->
+          <div id="main">
+<article id="toto">
+  <h1>{{ .Title }}</h1>
+<ul>
+  {{ .Content }}
+</ul>
+</article>
+
+
+          </div>
+
+{{ partial "footer.html" . }}
