--- a/mugairyu/layouts/_default/single.html
+++ b/mugairyu/layouts/_default/single.html
@@ -3,32 +3,13 @@
     <!-- Wrapper -->
       <div id="wrapper">
 
-        <!-- Header -->
-          <header id="header">
-            <div class="logo">
-              {{ with .Site.Params.logoimage }}
-              <img src="{{ . }}" width="100%" style="padding: 10px 10px 10px 10px;">
-            {{ end }}
-            {{ with .Site.Params.logo }}            
-              <span class="icon {{ . }}"></span>
-            {{ end }}
-            </div>
-            <div class="content">
-              <div class="inner">
-                <h1>{{ .Site.Title | safeHTML }}</h1>
-                <p>{{ .Site.Params.description | safeHTML }}</p>
-              </div>
-            </div>
-
-          </header>
-
         <!-- Main -->
           <div id="main">
-<article id="toto">
+<article id="{{ .File.TranslationBaseName }}">
   <h1>{{ .Title }}</h1>
-<ul>
+  {{.TableOfContents}}
+
   {{ .Content }}
-</ul>
 </article>
 
 
