retirer active de main.article.active je crois

--- a/mugairyu/static/css/main.css
+++ b/mugairyu/static/css/main.css
@@ -1066,7 +1066,7 @@ button {
     background-color: rgba(27, 31, 34, 0.85);
     border-radius: 4px;
     opacity: 0; }
-    #main article.active {
+    #main article {
       -moz-transform: translateY(0);
       -webkit-transform: translateY(0);
       -ms-transform: translateY(0);
